RealtimeOutgoingVideoSourceCocoa rotation session should not use IOSurface https://bugs.webkit.org/show_bug.cgi?id=236139

Reviewed by Eric Carlson.

Introduce a parameter to use IOSurface or not in ImageRotationSessionVT.
Make use of that parameter in RealtimeOutgoingVideoSourceCocoa to disable IOSurface use.

Covered by existing tests.

* platform/graphics/cv/CVUtilities.h:
* platform/graphics/cv/CVUtilities.mm:
(WebCore::createIOSurfaceCVPixelBufferPool):
(WebCore::createInMemoryCVPixelBufferPool):
* platform/graphics/cv/ImageRotationSessionVT.h:
* platform/graphics/cv/ImageRotationSessionVT.mm:
(WebCore::ImageRotationSessionVT::ImageRotationSessionVT):
(WebCore::ImageRotationSessionVT::rotate):
* platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.mm:
(WebCore::RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer):



Canonical link: https://commits.webkit.org/246953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289365 268f45cc-cd09-0410-ab3c-d52691b4dbfc