Source/WebCore/platform/graphics/cv/ImageRotationSessionVT.mm
@@ -27,6 +27,7 @@
 #import "ImageRotationSessionVT.h"
 
 #import "AffineTransform.h"
+#import "CVUtilities.h"
 #import "Logging.h"
 #import "MediaSample.h"
 
@@ -59,13 +60,14 @@ static ImageRotationSessionVT::RotationProperties transformToRotationProperties(
     return rotation;
 }
 
-ImageRotationSessionVT::ImageRotationSessionVT(AffineTransform&& transform, FloatSize size, IsCGImageCompatible isCGImageCompatible)
-    : ImageRotationSessionVT(transformToRotationProperties(transform), size, isCGImageCompatible)
+ImageRotationSessionVT::ImageRotationSessionVT(AffineTransform&& transform, FloatSize size, IsCGImageCompatible isCGImageCompatible, ShouldUseIOSurface shouldUseIOSurface)
+    : ImageRotationSessionVT(transformToRotationProperties(transform), size, isCGImageCompatible, shouldUseIOSurface)
 {
     m_transform = WTFMove(transform);
 }
 
-ImageRotationSessionVT::ImageRotationSessionVT(const RotationProperties& rotation, FloatSize size, IsCGImageCompatible isCGImageCompatible)
+ImageRotationSessionVT::ImageRotationSessionVT(const RotationProperties& rotation, FloatSize size, IsCGImageCompatible isCGImageCompatible, ShouldUseIOSurface shouldUseIOSurface)
+    : m_shouldUseIOSurface(shouldUseIOSurface == ShouldUseIOSurface::Yes)
 {
     initialize(rotation, size, isCGImageCompatible);
 }
@@ -97,21 +99,14 @@ RetainPtr<CVPixelBufferRef> ImageRotationSessionVT::rotate(CVPixelBufferRef pixe
     auto pixelFormat = CVPixelBufferGetPixelFormatType(pixelBuffer);
     if (pixelFormat != m_pixelFormat || !m_rotationPool) {
         m_pixelFormat = pixelFormat;
-        auto pixelAttributes = @{
-            (__bridge NSString *)kCVPixelBufferWidthKey: @(m_rotatedSize.width()),
-            (__bridge NSString *)kCVPixelBufferHeightKey: @(m_rotatedSize.height()),
-            (__bridge NSString *)kCVPixelBufferPixelFormatTypeKey: @(m_pixelFormat),
-            (__bridge NSString *)kCVPixelBufferCGImageCompatibilityKey: (m_isCGImageCompatible == IsCGImageCompatible::Yes ? @YES : @NO),
-            (__bridge NSString *)kCVPixelBufferIOSurfacePropertiesKey : @{ }
-        };
+        auto bufferPool = createCVPixelBufferPool(m_rotatedSize.width(), m_rotatedSize.height(), m_pixelFormat, 0u, m_isCGImageCompatible == IsCGImageCompatible::Yes, m_shouldUseIOSurface);
 
-        CVPixelBufferPoolRef rawPool = nullptr;
-        if (auto err = CVPixelBufferPoolCreate(kCFAllocatorDefault, nullptr, (__bridge CFDictionaryRef)pixelAttributes, &rawPool); err != noErr) {
-            RELEASE_LOG_ERROR(WebRTC, "ImageRotationSessionVT failed creating buffer pool with error %d", err);
+        if (!bufferPool) {
+            RELEASE_LOG_ERROR(WebRTC, "ImageRotationSessionVT failed creating buffer pool with error %d", (int)bufferPool.error());
             return nullptr;
         }
 
-        m_rotationPool = adoptCF(rawPool);
+        m_rotationPool = WTFMove(*bufferPool);
     }
 
     RetainPtr<CVPixelBufferRef> result;
